# MatiTradingBot

./: .env.example  .gitattributes  .gitignore  .ruff-baseline.json  AGENTS.md  AUDITORIA_SWING_V4.md  AUDITORIA_SWING_V5_POST_IMPLEMENTACION.md  CLAUDE.md  DEPLOY_PAPER.md  EXPERIMENTS.md  HANDOFF_2026-07-05.md  HYROTRADER_PLAN.md  LICENSE  PLAN_MEJORA_AUDITORIA.md  README.md  REFACTOR_BACKLOG.md  SESSION.md  SESSION_ARCHIVE.md  SWING_PLAN.md  SWING_V6_PLAN.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.json
.codex/: hooks.json  instruction-budget.json
analitics/: gui_viewer.py
backtests/: STRATEGY_VERSIONS.md  journal_pro_trend_btc_usdt_BTCUSDT_1H_20260624_113854.json  journal_pro_trend_btc_usdt_BTCUSDT_1H_20260624_121120.json  journal_pro_trend_btc_usdt_BTCUSDT_1H_20260624_134832.json  journal_pro_trend_btc_usdt_BTCUSDT_1H_20260624_161103.json  journal_pro_trend_btc_usdt_BTCUSDT_1H_20260624_170913.json  journal_pro_trend_btc_usdt_BTCUSDT_1H_20260624_180457.json  journal_pro_trend_btc_usdt_BTCUSDT_1H_20260624_190721.json  journal_pro_trend_btc_usdt_BTCUSDT_1H_20260625_090415.json  journal_pro_trend_btc_usdt_BTCUSDT_1H_20260625_103727.json  journal_pro_trend_btc_usdt_BTCUSDT_1H_20260625_113217.json  journal_pro_trend_btc_usdt_BTCUSDT_1H_20260625_131121.json  journal_pro_trend_btc_usdt_BTCUSDT_1H_20260625_151250.json  journal_pro_trend_btc_usdt_BTCUSDT_1H_20260625_152552.json  journal_pro_trend_btc_usdt_BTCUSDT_1H_20260625_153240.json  journal_pro_trend_btc_usdt_BTCUSDT_1H_20260625_154608.json  journal_pro_trend_btc_usdt_BTCUSDT_1H_20260625_162219.json  journal_pro_trend_btc_usdt_BTCUSDT_1H_20260625_162259.json  journal_pro_trend_btc_usdt_BTCUSDT_1H_20260625_164234.json  journal_pro_trend_btc_usdt_BTCUSDT_1H_20260625_170410.json  journal_pro_trend_btc_usdt_BTCUSDT_1H_20260625_172432.json  journal_pro_trend_btc_usdt_BTCUSDT_1H_20260625_173427.json  journal_pro_trend_btc_usdt_BTCUSDT_1H_20260625_175445.json  journal_pro_trend_btc_usdt_BTCUSDT_1H_20260625_181517.json  journal_pro_trend_btc_usdt_BTCUSDT_1H_20260625_184640.json  journal_pro_trend_btc_usdt_BTCUSDT_1H_20260625_195302.json  journal_pro_trend_btc_usdt_BTCUSDT_1H_20260626_074917.json  (+83 more)
(+355 files in other folders)
